fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -43,7 +43,8 @@ li div {
 }
 
 li img {
-    margin-right: 10px;
+    margin-right: 20px;
+    margin-top: 20px;
     display: table-cell;
     vertical-align: middle;
 }
